# adventure-labs

./: .cursorrules  .gitignore  .gitmodules  .infisical.json  .mcp.json  ACORE_CONSTITUTION.md  AGENTS.md  AI_WORKFLOW.md  CLAUDE.md  CONTRIBUTING.md  PLANO_MONOREPO_ADVENTURE_LABS.md  PLANO_REVISAO_RLS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.adventure_brain.example/: README.md  last_sync.txt.example
.cursor/: google-marketing-mcp.env.example  mcp.json
.githooks/: post-merge  pre-commit
.github/: CODEOWNERS  pull_request_template.md
_internal/: FLUXO_DE_TRABALHO.md  analise-openClaw-2026-04-17.md  audit-secrets-summary.md  auditoria-monorepo-2026-04-15.md  devices-tailnet.md  handoff-2026-04-17.md  relatorio-estrategico-2026-04-16.md  stack-completa-2026-04-16.md  stack-report-2026-04-16.md
docs/: ACORE_ROADMAP.md  ACORE_SESSION_LOG.md  ADMIN_ENV_CLIENTE.env.template  ADMIN_POR_CLIENTE_SUBDOMINIO.md  ADS_META_ADMIN.md  ADV_CSUITE_MEMORY_METADATA.md  ARQUITETURA_OPENCLAW_HIBRIDO.md  BACKLOG.md  COLEÇÃO_DOCS_PARA_IA.md  CSuite_relatorios_founder.md  CURSOR_WORKFLOWS.md  DECISION_LOG.md  FASE_6_GIT_E_REPOSITORIO.md  GEMINI_CLI_WORKSPACE.md  (+41 more)
tools/xtractor/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
tools/xtractor/api/: cron.py
tools/xtractor/scripts/: run_once.py  test_gmail.py
tools/xtractor/xtractor/: __init__.py  __main__.py  chat_notifier.py  config.py  drive_client.py  gemini_analyzer.py  gmail_client.py  main.py  models.py  sheets_client.py  weekly_report.py
(+1344 files in other folders)
